--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
     "scripts": {
         "start": "npm run prettier && npm run eslint && astro dev",
         "build": "npm run prettier && npm run eslint && astro check && astro build",
+        "preview": "npm run build && astro preview",
         "eslint": "eslint --ext .ts,.tsx,.astro src",
         "prettier": "prettier --write . --plugin=prettier-plugin-astro --plugin=prettier-plugin-tailwindcss"
     },
     "dependencies": {
         "@astrojs/check": "^0.9.4",
         "@astrojs/tailwind": "^5.1.2",
-        "astro": "^4.16.13",
+        "astro": "^4.16.14",
         "autoprefixer": "^10.4.19",
         "tailwindcss": "^3.4.3",
-        "taily-ui": "^1.2.12",
+        "taily-ui": "^1.2.14",
         "typescript": "^5.4.4"
     },
     "devDependencies": {
